[workspace]
members = ["quoth-macros"]

[package]
name = "quoth"
version = "0.1.7"
edition = "2024"
authors = ["sam0x17"]
description = "Quoth is a scannerless (no-lexing), developer-friendly parsing library for implementing DSLs and syntax parsers in Rust"
keywords = ["quoth", "parsing", "language", "DSL", "parser"]
homepage = "https://github.com/sam0x17/quoth"
repository = "https://github.com/sam0x17/quoth"
license = "MIT"

[dependencies]
quoth-macros = { path = "quoth-macros", version = "0.1.7" }
regex = "1.10"
rust_decimal = "1"
safe-string = "0.1.11"
