[workspace]
members = ["quoth-macros"]

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["sam0x17"]
license = "MIT"
homepage = "https://github.com/sam0x17/quoth"
repository = "https://github.com/sam0x17/quoth"

[package]
name = "quoth"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Quoth is a scannerless (no-lexing), developer-friendly parsing library for implementing DSLs and syntax parsers in Rust"
keywords = ["quoth", "parsing", "language", "DSL", "parser"]
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["regex/std", "rust_decimal/std", "safe-string/std"]

[dependencies]
quoth-macros = { path = "quoth-macros", version = "0.2.0" }
regex = { version = "1.10", default-features = false, features = ["perf", "unicode"] }
rust_decimal = { version = "1", default-features = false, features = ["serde"] }
safe-string = { version = "0.3.0", default-features = false }
