[package]
name = "quoth-macros"
version = "0.1.7"
edition = "2024"
authors = ["sam0x17"]
description = "support macros for quoth"
license = "MIT"
homepage = "https://github.com/sam0x17/quoth"
repository = "https://github.com/sam0x17/quoth"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
