[package]
name = "quoth-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "support macros for quoth"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
